--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 joblib==0.14.1
 MarkupSafe==1.1.1
-mkl-fft==1.0.15
+mkl-fft
 mkl-random==1.1.0
 mkl-service==2.3.0
 numpy==1.17.4
@@ -23,3 +23,4 @@ pandocfilters==1.4.2
 pickleshare==0.7.4
 requests==2.19.1
 scikit-image==0.14.0
+
