--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ Jinja2==2.10.3
 joblib==0.14.1
 MarkupSafe==1.1.1
 mkl-fft
-mkl-random==1.1.0
-mkl-service==2.3.0
+mkl-random
+mkl-service
 numpy==1.17.4
 pandas==0.25.3
 python-dateutil==2.8.1
